# ets2-telemetry-server

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
html/: CMakeLists.txt  index.html.in
html/scripts/: app.js  dashboard-core.js
html/skins/daf-xf/: config.json
html/skins/default/: config.json
html/skins/default-mph/: config.json
html/skins/man-tgx/: config.json
html/skins/man-tgx-mph/: config.json
html/skins/mercedes-atego/: config.json
html/skins/peterbilt579/: config.json
html/skins/rd-info/: config.json
html/skins/scania/: config.json
html/skins/template/: config.json
html/skins/volvo-fh/: config.json
server/: CMakeLists.txt
server/server/: HttpServer.cpp  HttpServer.h  TelemeteryHelper.cpp  TelemeteryHelper.h  Version.h.in  WebSocket.cpp  WebSocket.h  main.cpp
ui/: AboutDialog.cpp  AboutDialog.h  Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  Dialog.cpp  Dialog.h  IApplication.h  MainWindow.cpp  MainWindow.h  SetupDialog.cpp  SetupDialog.h  main.cpp
ui/Base/: AboutDialog.cpp  AboutDialog.fbp  AboutDialog.h  Dialogs.cpp  Dialogs.fbp  Dialogs.h  MainWindow.cpp  MainWindow.fbp  MainWindow.h  SetupDialog.cpp  SetupDialog.fbp  SetupDialog.h
ui/Helpers/: Game.cpp  Game.h  Network.cpp  Network.h  Platform.h  Plugin.cpp  Plugin.h
ui/Resources/: app.xpm
